force-app/main/default/objects/Change_Item__c/Change_Item__c.object-meta.xml
<CustomObject>
    <description>IT use only:
Change Items are individual changes to salesforce metadata, that are grouped by projects or  changes. They provide an audit trail of change for the environments.</description>
    <label>Change Item</label>
    <nameField>
        <displayFormat>CI-{00000}</displayFormat>
        <label>Change Item Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Change Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>