force-app/main/default/objects/Change_Item__c/fields/Buddy_Review_Notes__c.field-meta.xml
<CustomField>
    <fullName>Buddy_Review_Notes__c</fullName>
    <inlineHelpText>Enter buddy suggestions here</inlineHelpText>
    <label>Buddy Review Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>