force-app/main/default/objects/Change_Item__c/fields/Buddy_Reviewer__c.field-meta.xml
<CustomField>
    <fullName>Buddy_Reviewer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Who Buddy Reviewed this Change for the Developer</description>
    <inlineHelpText>Who Buddy Reviewed this Change for the Developer?</inlineHelpText>
    <label>Buddy Reviewer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Change_Items_Reviewed</relationshipName>
    <type>Lookup</type>
</CustomField>