force-app/main/default/objects/Change_Item__c/fields/Component_Name__c.field-meta.xml
<CustomField>
    <fullName>Component_Name__c</fullName>
    <description>The Name of the individual component being referenced</description>
    <inlineHelpText>Enter the Name of the item being changed. For custom fields please use the label name</inlineHelpText>
    <label>Component Name</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>