force-app/main/default/objects/Change_Item__c/fields/Component_Type__c.field-meta.xml
<CustomField>
    <fullName>Component_Type__c</fullName>
    <description>A list of all the component types that can be added to change sets.</description>
    <label>Component Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Account Criteria Based Sharing Rule</fullName>
            </value>
            <value>
                <fullName>Account Owner Sharing Rule</fullName>
            </value>
            <value>
                <fullName>Action</fullName>
            </value>
            <value>
                <fullName>Analytic Snapshot</fullName>
            </value>
            <value>
                <fullName>Apex Class</fullName>
            </value>
            <value>
                <fullName>Apex Sharing Reason</fullName>
            </value>
            <value>
                <fullName>Apex Trigger</fullName>
            </value>
            <value>
                <fullName>App</fullName>
            </value>
            <value>
                <fullName>Approval Process</fullName>
            </value>
            <value>
                <fullName>Assignment Rule</fullName>
            </value>
            <value>
                <fullName>Auth. Provider</fullName>
            </value>
            <value>
                <fullName>AutoResponse Rule</fullName>
            </value>
            <value>
                <fullName>Button or Link</fullName>
            </value>
            <value>
                <fullName>Call Center</fullName>
            </value>
            <value>
                <fullName>Campaign Criteria Based Sharing Rule</fullName>
            </value>
            <value>
                <fullName>Campaign Owner Sharing Rule</fullName>
            </value>
            <value>
                <fullName>Case Criteria Based Sharing Rule</fullName>
            </value>
            <value>
                <fullName>Case Owner Sharing Rule</fullName>
            </value>
            <value>
                <fullName>Compact Layout</fullName>
            </value>
            <value>
                <fullName>Contact Criteria Based Sharing Rule</fullName>
            </value>
            <value>
                <fullName>Contact Owner Sharing Rule</fullName>
            </value>
            <value>
                <fullName>Custom Data Type</fullName>
            </value>
            <value>
                <fullName>Custom Field</fullName>
            </value>
            <value>
                <fullName>Custom Label</fullName>
            </value>
            <value>
                <fullName>Custom Object</fullName>
            </value>
            <value>
                <fullName>Custom Object Criteria Based Sharing Rule</fullName>
            </value>
            <value>
                <fullName>Custom Object Owner Sharing Rule</fullName>
            </value>
            <value>
                <fullName>Custom Report Type</fullName>
            </value>
            <value>
                <fullName>Custom Setting</fullName>
            </value>
            <value>
                <fullName>Dashboard</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>