force-app/main/default/objects/Change_Item__c/fields/Deployment_Instructions__c.field-meta.xml
<CustomField>
    <fullName>Deployment_Instructions__c</fullName>
    <inlineHelpText>Please enter the instructions for manual deployment steps

Not required if this is a Change Set deployment</inlineHelpText>
    <label>Deployment Instructions</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>