force-app/main/default/objects/Change_Item__c/fields/Deployment_Method__c.field-meta.xml
<CustomField>
    <fullName>Deployment_Method__c</fullName>
    <inlineHelpText>Select how this change needs to be deployed</inlineHelpText>
    <label>Deployment Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Change Set</fullName>
            </value>
            <value>
                <fullName>Manual</fullName>
            </value>
            <value>
                <fullName>Eclipse</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>