force-app/main/default/objects/Change_Item__c/fields/Details__c.field-meta.xml
<CustomField>
    <fullName>Details__c</fullName>
    <inlineHelpText>Add details of Component change if applicable, for example - Is the change an updated or new component
Plus any other details that don&apos;t fit anywhere else</inlineHelpText>
    <label>Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>