force-app/main/default/objects/Change_Item__c/fields/Developer__c.field-meta.xml
<CustomField>
    <fullName>Developer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Who is the Developer for this change</inlineHelpText>
    <label>Developer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Change_Items</relationshipName>
    <type>Lookup</type>
</CustomField>