force-app/main/default/objects/Change_Item__c/fields/Environment__c.field-meta.xml
<CustomField>
    <fullName>Environment__c</fullName>
    <inlineHelpText>Enter the environments where this component currently exists</inlineHelpText>
    <label>Environment</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Live</fullName>
            </value>
            <value>
                <fullName>QA</fullName>
            </value>
            <value>
                <fullName>SandboxE</fullName>
            </value>
            <value>
                <fullName>SandboxJ</fullName>
            </value>
            <value>
                <fullName>Sandbox1VR</fullName>
            </value>
            <value>
                <fullName>SandboxCC</fullName>
            </value>
            <value>
                <fullName>VR1 Dev</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>