force-app/main/default/objects/Change_Item__c/fields/JIRA_Issue_ID__c.field-meta.xml
<CustomField>
    <fullName>JIRA_Issue_ID__c</fullName>
    <description>Used for audit purposes to link the change back to requirements in JIRA</description>
    <inlineHelpText>Enter the JIRA Issue number here</inlineHelpText>
    <label>JIRA Issue ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>