force-app/main/default/objects/Change_Item__c/fields/JIRA_Issue_Link__c.field-meta.xml
<CustomField>
    <fullName>JIRA_Issue_Link__c</fullName>
    <description>Link to JIRA</description>
    <formula>HYPERLINK(&quot;https://valueretail.atlassian.net/browse/&quot; +  JIRA_Issue_ID__c , &quot;JIRA Link&quot;, &quot;_blank&quot;)</formula>
    <label>JIRA Issue Link</label>
    <type>Text</type>
</CustomField>