force-app/main/default/objects/Change_Item__c/fields/Pre_Deploy_Item__c.field-meta.xml
<CustomField>
    <fullName>Pre_Deploy_Item__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Does the component need to be deployed prior to the main release?</inlineHelpText>
    <label>Pre Deploy Item</label>
    <type>Checkbox</type>
</CustomField>