force-app/main/default/objects/Change_Item__c/fields/Related_Object__c.field-meta.xml
<CustomField>
    <fullName>Related_Object__c</fullName>
    <description>If a component can be duplicated (e.g. field name across multiple objects) this field is used to clarify which component is being referenced</description>
    <inlineHelpText>(if applicable) enter the object in which this component belongs to</inlineHelpText>
    <label>Related Object</label>
    <length>100</length>
    <type>Text</type>
</CustomField>