force-app/main/default/objects/Change_Item__c/fields/Release__c.field-meta.xml
<CustomField>
    <fullName>Release__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>Lookup to the Release Details in which this Change Item will be deployed as part of.</inlineHelpText>
    <label>Release</label>
    <referenceTo>Release__c</referenceTo>
    <relationshipLabel>Change Items</relationshipLabel>
    <relationshipName>Change_Items</relationshipName>
    <type>Lookup</type>
</CustomField>