force-app/main/default/objects/Change_Item__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <inlineHelpText>Set the status to &quot;Deployed&quot; once the component has been deployed.</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>In Development</fullName>
                <default>true</default>
                <label>In Development</label>
            </value>
            <value>
                <fullName>In Test</fullName>
            </value>
            <value>
                <fullName>Deployed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>